# specific-labs-takehome-Rishi

./: .gitignore  README.md  WRITEUP.md  pyproject.toml
.github/workflows/: ci.yaml
agent/: config.py  gate.py  probe.py  prompt.py  run.py  shell.py  transcript.py  usage.py
extra_tasks/: README.md
extra_tasks/combined-extract-reconcile/: task.md  verify.py
extra_tasks/combined-extract-reconcile/workspace/: inventory.csv
extra_tasks/csv-encoding-merge/: task.md  verify.py
extra_tasks/csv-encoding-merge/workspace/: orders_alpha.csv  orders_beta.csv  orders_gamma.csv
extra_tasks/log-extract-severity/: task.md  verify.py
extra_tasks/pii-redact-ssn/: task.md  verify.py
extra_tasks/pii-redact-ssn/workspace/: records.jsonl
extra_tasks/reconcile-pricing/: task.md  verify.py
extra_tasks/repair-sales-pandas/: task.md  verify.py
runner/: run_task.py
tasks/01-csv-merge-basic/: task.md  verify.py
tasks/02-csv-schema-normalize/: task.md  verify.py
tasks/03-log-extract-errors/: task.md  verify.py
tasks/04-log-sessionize/: task.md  verify.py
tasks/05-pii-redact-basic/: manifest.json  task.md  verify.py
tasks/06-pii-redact-names/: manifest.json  task.md  verify.py
tasks/07-script-repair-simple/: task.md  verify.py
tasks/08-script-repair-pandas/: task.md  verify.py
tasks/09-reconcile-inventory/: task.md  verify.py
tasks/10-reconcile-events/: task.md  verify.py
tests/integration/: test_agent_loop.py
tests/unit/: test_gate.py  test_probe.py  test_prompt.py  test_run.py  test_shell.py  test_transcript.py  test_usage.py
(+137 files in other folders)
