[project]
name = "agent-gauntlet-takehome"
version = "0.1.0"
description = "Agent Gauntlet candidate kit"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50",
    "pandas>=2.0",
    "pytest>=8.0",
]

[dependency-groups]
dev = ["ruff>=0.6.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agent --cov-report=term-missing --cov-fail-under=100"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["tasks", "runner", ".venv", "eval_out"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["agent"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
